[gd_scene load_steps=12 format=3 uid="uid://ctvukuon84qhw"]

[ext_resource type="Script" path="res://_Scripts/shop.gd" id="1_tf1v1"]
[ext_resource type="Theme" uid="uid://cccu7slchsi8h" path="res://new_theme.tres" id="2_h2720"]
[ext_resource type="Script" path="res://_Scripts/Seller.gd" id="3_c5rjx"]
[ext_resource type="Texture2D" uid="uid://dplyupkvmvj5j" path="res://Assets/MoneyBag.png" id="3_st4tx"]
[ext_resource type="Texture2D" uid="uid://dhjhlaagihgka" path="res://Assets/Shovel.png" id="4_rr62q"]
[ext_resource type="Texture2D" uid="uid://d30jk178yditc" path="res://Assets/Seller.png" id="5_kod10"]

[sub_resource type="ButtonGroup" id="ButtonGroup_cn8cc"]

[sub_resource type="Animation" id="Animation_ggbdo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 32)]
}

[sub_resource type="Animation" id="Animation_b7g7h"]
resource_name = "TransIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, -546), Vector2(64, 0)]
}

[sub_resource type="Animation" id="Animation_a2435"]
resource_name = "TransOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 0), Vector2(64, -546)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tt3mk"]
_data = {
"RESET": SubResource("Animation_ggbdo"),
"TransIn": SubResource("Animation_b7g7h"),
"TransOut": SubResource("Animation_a2435")
}

[node name="Shop" type="CanvasLayer"]
offset = Vector2(64, 32)
transform = Transform2D(1, 0, 0, 1, 64, 32)
follow_viewport_enabled = true
script = ExtResource("1_tf1v1")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.385493, 0.385492, 0.385492, 1)
custom_minimum_size = Vector2(1024, 576)
offset_right = 950.0
offset_bottom = 576.0
theme = ExtResource("2_h2720")

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 544.0
theme = ExtResource("2_h2720")
tab_alignment = 1
drag_to_rearrange_enabled = true

[node name="Supply Connections" type="Panel" parent="Panel/TabContainer"]
layout_mode = 2
theme = ExtResource("2_h2720")

[node name="Supply Connections" type="MarginContainer" parent="Panel/TabContainer/Supply Connections"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("2_h2720")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections"]
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer"]
custom_minimum_size = Vector2(250, 470)
layout_mode = 2
theme = ExtResource("2_h2720")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/ScrollContainer"]
layout_mode = 2
theme = ExtResource("2_h2720")
theme_override_constants/separation = 10

[node name="Seller" type="Button" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_c5rjx")

[node name="Items On Sale" type="Control" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.72

[node name="Label" type="Label" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Andrew Tate 

Reputation Level:
"

[node name="CredBar" type="ProgressBar" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.1
theme_override_constants/outline_size = 2
value = 89.0

[node name="ItemList" type="HBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Item container" type="GridContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="Button" type="Button" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList/MarginContainer/Item container"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
toggle_mode = true
button_mask = 7
button_group = SubResource("ButtonGroup_cn8cc")
icon = ExtResource("4_rr62q")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList/MarginContainer/Item container/Button"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 26.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "0/10"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList"]
custom_minimum_size = Vector2(143, 0)
layout_mode = 2

[node name="Item Information" type="Label" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList/VBoxContainer"]
layout_mode = 2
text = "Tool

Price:
Sell Value:
Exp:

Total:"

[node name="Add to Cart" type="Button" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Add to Cart"

[node name="Remove from Cart" type="Button" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Remove from Cart"

[node name="Buy" type="Button" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer/ItemList/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Buy"

[node name="Control" type="Control" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="BigSellerPicDisplay" type="TextureRect" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_kod10")
expand_mode = 5

[node name="Control" type="Control" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Discount Upgrade" type="HBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2/Discount Upgrade"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_st4tx")
expand_mode = 3

[node name="Discount Bar" type="ProgressBar" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2/Discount Upgrade"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Sell Value Upgrade" type="HBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2/Sell Value Upgrade"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_st4tx")
expand_mode = 3

[node name="Sell Value Bar" type="ProgressBar" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2/Sell Value Upgrade"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Shopping Cart Upgrade" type="HBoxContainer" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2/Shopping Cart Upgrade"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_st4tx")
expand_mode = 3

[node name="Shopping Cart Bar" type="ProgressBar" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2/Shopping Cart Upgrade"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="New Item" type="Button" parent="Panel/TabContainer/Supply Connections/Supply Connections/GridContainer/Items On Sale/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Unlock New Item"

[node name="Appliances" type="VFlowContainer" parent="Panel/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
theme = ExtResource("2_h2720")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Panel")
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_tt3mk")
}

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_right = 0.882
offset_left = 256.0
offset_top = 544.0
offset_right = -248.064
offset_bottom = 576.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
